[package]
name = "hyper-stuck"
version = "0.1.0"
authors = ["Sudeep Jathar <sudeep.jathar@druva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
futures-util = "0.3"
rand = "0.8"
waitgroup = "0.1.2"
log = "0.4"
env_logger = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-rustls = { version = "0.23.0", features = ["http2"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
webpki = "0.22.0"

[profile.release]
debug = 2
